plugins {
    id 'org.springframework.boot' version '2.4.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'kr.co.strato'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    mavenCentral()
}


ext {
    // https://spring.io/projects/spring-cloud 의 Release Trains 부분을 보세요.
    springCloudVersion = '2020.0.5'
}

apply plugin: "io.spring.dependency-management"


dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.springframework.boot:spring-boot-starter-validation"
    
    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    implementation 'org.projectlombok:lombok:1.18.20'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation "com.querydsl:querydsl-jpa" 
    implementation "com.vladmihalcea:hibernate-types-55:2.14.0"
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.5'
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.springframework', name: 'spring-websocket', version: '5.2.19.RELEASE'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.json:json:20211205'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
	implementation 'com.google.api-client:google-api-client:1.33.2'
	
	//Security & JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    
    //Jaeger tracing
	implementation 'io.opentracing.contrib:opentracing-spring-jaeger-web-starter:3.3.1'
	implementation 'io.opentracing.contrib:opentracing-spring-cloud-starter:0.5.9'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "org.projectlombok:lombok:1.18.20"
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
    
	implementation group: 'com.google.api-client', name: 'google-api-client', version: '1.33.4'
	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'	
	
    implementation group: 'io.fabric8', name: 'kubernetes-client', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-core', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-rbac', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-admissionregistration', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-apps', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-autoscaling', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-apiextensions', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-batch', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-certificates', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-coordination', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-discovery', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-events', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-extensions', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-flowcontrol', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-networking', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-metrics', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-policy', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-scheduling', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-storageclass', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-node', version: '5.11.2'
	implementation group: 'io.fabric8', name: 'kubernetes-model-common', version: '5.11.2'
	
	implementation group: 'org.yaml', name: 'snakeyaml', version: '1.29'
	implementation 'org.springframework.kafka:spring-kafka'
}

// queryDSL Q파일 생성 위치 지정
def generated='src/main/generated'
sourceSets {
    main.java.srcDirs += [ generated ]
}

tasks.withType(JavaCompile) {
    options.generatedSourceOutputDirectory = file(generated)
}

clean.doLast {
    file(generated).deleteDir()
}

tasks.named('test') {
    useJUnitPlatform()
}